# SoundDiffSep

./: .gitattributes  .gitignore  LICENSE  README.ja.md  README.md  hpss_retouch.ipynb  inference_test.ipynb  inference_test_ola.ipynb  inference_test_ola_cuda.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
DCUNet/: conf_crosstalk_add_EQ_4096.yml  conf_crosstalk_add_EQ_48.yml  conf_finetuning.yaml  conf_finetuning_crosstalk_add_EQ_DCUNet20.yaml  conf_finetuning_crosstalk_add_EQ_Large-DCUNet.yaml  conf_finetuning_crosstalk_add_EQ_Large-DCUNet.yml
ResUnet/: stereo_unconditional.yaml
exp/: conf.yml
exp/checkpoints/: epoch=19-step=200000.ckpt  epoch=21-step=110000.ckpt  epoch=8-step=45000.ckpt
exp/checkpoints/DCUNet-16_TwoNoise_48/: rms_step=160000.ckpt  rms_step=330000.ckpt  rms_step=40000.ckpt  rms_step=80000.ckpt  step=40000.ckpt
exp/checkpoints/DCUNet-16_TwoNoise_CrossTalk_add_EQ2_48/: step=210000.ckpt  step=370000.ckpt  step=460000.ckpt
exp/checkpoints/DCUNet-20_TwoNoise_CrossTalk_add_EQ2/: epoch=15-step=80000.ckpt
exp/checkpoints/Large-DCUNet-20_TwoNoise_CrossTalk_add_EQ2/: epoch=25-step=130000.ckpt
exp/checkpoints/ResUnet_TwoNoise_48/: resunet_48_step=100000_s5_b30.ckpt  rms10_step=40000.ckpt  rms_best_step=260000.ckpt  rms_last_step=310000.ckpt
exp/checkpoints/ResUnet_TwoNoise_ClossTalk_add_EQ2/: rir_cross_step=100000.ckpt  rir_cross_step=60000.ckpt  step=360000.ckpt  step=60000.ckpt
models/: dcunet.py  overlap_add.py
notebook/: inference_test_ola.ipynb  inference_test_ola_cuda.ipynb
sounddiffsep/: __init__.py  finetuning.py  model_loader.py
sounddiffsep/data_utils/: AudioMixCrosstalkTwoNoiseEQ_データ作成手順.md  AudioSetMixCrosstalkTwoNoiseEQ_データ作成手順.md  mix_dataset.py
sounddiffsep/models/resunet/: audiosep_unconditional.py  resunet.py  resunet_unconditional.py
sounddiffsep/system/: sep_system.py
system/: sep_system.py
tests/data_utils/: test_audioset_dataset.py
