[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sounddiffsep"
dynamic = ["version"]
description = "Sound source separation using diffusion models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "kasahart", email = "your.email@example.com"},
]
keywords = ["audio", "source separation", "diffusion", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "audiomentations>=0.41.0",
    "asteroid>=0.7.0",
    "torch>=2.5.1",
    "torch-optimizer>=0.1.0",
    "torchlibrosa>=0.1.0",
    "torchmetrics>=0.11.4",
    "torchaudio>=2.5.1",
    "lightning-utilities>=0.14.3",
    "lightning-utilities>=0.14.3",
    "pytorch-lightning>=2.4.0",
    "numpy>=2.0.2",
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.2",
    "tqdm>=4.67.1",
    "schedulefree>=1.4",
    "PyYAML>=6.0",
    "pandas>=2.2.3"
]

[project.optional-dependencies]
dev = [
    "pyroomacoustics>=0.8.3",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=0.1.16.0",
    "tensorboard>=2.9.0",
    "loralib"
]
cuda = [
    "torch[cuda]",
    "torchaudio[cuda]",
]

[project.urls]
Homepage = "https://github.com/kasahart/SoundDiffSep"
Repository = "https://github.com/kasahart/SoundDiffSep"
Issues = "https://github.com/kasahart/SoundDiffSep/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sounddiffsep*"]


[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]